--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "orientation": "any",
     "scope":".",
-    "theme_color": "",
+    "theme_color": "#33495e",
     "background_color": "#33495e",
     "description":"Currículum Web AlbertoCF",
     "icons": [
