--- a/public/manifest.json
+++ b/public/manifest.json
@@ -56,6 +56,12 @@
         "src": "ico/512.png",
         "sizes": "512x512",
         "type": "image/png"
+      },
+      {
+        "src": "ico/maskable_icon.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "maskable"
       }
     ]
 }
