cambio de dominio

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "CValbertoCF",
     "short_name": "CValbertoCF",
-    "start_url": "https://cvalbertocf.deysol.com/",
+    "start_url": "https://cvalbertocf.eclipseinformatica.com/",
     "display": "standalone",
     "orientation": "any",
     "scope":".",
